<resources>
    <string name="app_name">RMS</string>
    <string name="register_user_btn">Register</string>
    <string name="login_user_btn">Login</string>
    <string name="create_a_new_account">Create new Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="login_text">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_login">User</string>
    <string name="admin_login">Admin</string>
    <string name="login_as">Login As..</string>
    <string name="nitc_resource_management_system">NITC RESOURCE MANAGEMENT SYSTEM</string>
    <string name="welcome_user">WELCOME USER</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_your_password">By clicking RESET, you will receive an email to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="header_image">header image</string>
    <string name="description">description</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="usertype">Usertype</string>
    <string name="full_name">Full Name</string>
    <string name="request_resource">Request Resource</string>
    <string name="request">Request</string>
    <string name="item_name">Item Name</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="complaint">Complaint</string>
    <string name="select_user_type">Select User Type</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new_password</string>
    <string name="select_item">Select Item</string>
    <string name="select_item_to_request">Select Item to request</string>
    <string name="add_item">Add item</string>
    <string name="add_item_btn">Add Item</string>
    <string name="item_category">Category</string>
    <string name="add_new_item">Add new Item</string>
    <string name="yes">Yes</string>
    <string name="alloted">Alloted :</string>
    <string name="furniture">Furniture</string>
    <string name="category">Category :</string>
    <string name="chair">Chair</string>
    <string name="name_">Name :</string>
    <string name="fc123">FC123</string>
    <string name="item_id">Item ID :</string>
    <string name="admin_view_complaints">aaaaa</string>
    <string name="Electronics">Electronics</string>


    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="alloted_resources">Admin Alloted Resources</string>
    <string name="admin_add_items">Admin Add Items</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="admin_view_requests">Admin View Requests</string>
    <string name="admin_view_resources">Admin View Resources</string>

    <string name="furniure">Furniture</string>
    <string name="electronics">Electronics</string>
    <string name="item_namee">Select item</string>
    <string name="table">Table</string>

    <string name="computer">Computer</string>
    <string name="projector">Projector</string>

    <string name="allocate_btn">Allocate</string>
    <string name="remove_request_btn">Remove</string>
    <string name="complaint_id">Complaint ID :</string>
    <string name="rt1234">RT1234</string>
    <string name="complained_item">Complained Item :</string>
    <string name="name__">Name :</string>
    <string name="email__">Email :</string>
    <string name="complaint_description_">Complaint Description :</string>
    <string name="date">Date :</string>
    <string name="_16_03_2023">16/03/2023</string>
    <string name="status">Status :</string>
    <string name="pending">Pending</string>
    <string name="accept">Accept</string>
    <string name="complaints">Complaints</string>
    <string name="notification">Notification</string>
    <string name="item">Item :</string>
    <string name="view_accepted_complaints">View Accepted Complaints</string>
    <string name="accept_date">Accept Date :</string>
    <string name="complaint_date">Complaint Date :</string>
    <string name="dd_mm_yyyy">dd-MM-yyyy</string>
    <string name="view_alloted_items">View Alloted Items</string>
    <string name="request_id">Request ID :</string>
    <string name="requested_item">Requested Item :</string>
    <string name="request_date">Request Date :</string>
    <string name="_12_months">12 Months</string>
    <string name="duration">Duration :</string>
    <string name="item_id__">Item ID :</string>
    <string name="quantity">Quantity</string>
    <string name="reject">Reject</string>
    <string name="enter_item_id">Enter Item Id</string>
    <string name="complained_itemid">Complained Item Id :</string>
    <string name="view_previous_complaint">View Previous Complaint</string>
    <string name="enter_location">Enter Location</string>
    <string name="location_description_">Location Description :</string>
    <string name="items_in_use">Items in Use</string>
    <string name="location">Location :</string>
    <string name="upto">Upto :</string>
    <string name="date_">date</string>
    <string name="upto_date_dd_mm_yyyy">Upto Date (DD-mm-YYYY)</string>
    <string name="Reallocation_Status">Reallocation Status</string>
    <string name="valid_upto">Valid Upto</string>
    <string name="new_validity_period">New Validity Period</string>
    <string name="request_">request</string>
    <string name="remove_">remove</string>
    <string name="view_previous_requests">view previous requests</string>
    <string name="old_validity">Old Validity</string>
    <string name="old_validity_">Old Validity :</string>
    <string name="new_validity_">New Validity :</string>
    <string name="Description">Description :</string>
    <string name="none">none</string>
    <string name="Select">Select</string>
    <string name="Reallocation_Request">Reallocation Request</string>
    <string name="alloted_on">Alloted on :</string>
    <string name="new_validity">New Validity :</string>
    <string name="Allocate">Allocate</string>


</resources>