<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_toolbar"
        app:titleTextColor="@color/white"
        android:background="@color/btn_color"
        />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/username"
        android:inputType="text"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="5dp"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/contactNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/contact_no"
        android:inputType="text"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="5dp"
         />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn"
         />


</LinearLayout>