<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="80dp"
        android:background="@color/btn_color"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/drawer_header_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/header_image"
            android:src="@mipmap/ic_launcher"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/drawer_header_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/drawer_header_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>